# darnwdl

./: AUTHORS  ChangeLog  Makefile.am  README  README.md  aclocal.m4  autogen.sh  build.xml  config.h.in  configure.ac  configure.in  darnwdl.glade  darnwdl.gladep  darnwdl.ui
docs/: format.md
po/: darnwdl.pot
src/: Makefile.am  callbacks.c  callbacks.h  fasterrender.c  fasterrender.h  graphdec.c  graphdec.h  jpeginmemorydec.c  jpeginmemorydec.h  main.c  myfunc.c  myfunc.h  pagerender.c  pagerender.h  pass2.c  support.c  support.h  wdl2txt.c  wdldec.c  wpass1.c  wpass1.h  wpass2.c  wpass2.h
src/jni/: Makefile  org_debian_paulliu_darnwdl_jni_DynamiteJNI.cc
src/org/debian/paulliu/darnwdl/: FontReplaceTable.java  IO.java  Main.java  Page.java  PageListGenerator.java  PagesPrintable.java  WPass1.java  WPass2.java
src/org/debian/paulliu/darnwdl/jni/: DynamiteJNI.java
src/org/debian/paulliu/darnwdl/test/: WPass1Test.java  WPass2Test.java
src/org/debian/paulliu/darnwdl/ui/: DrawPanel.java  MainWindow.java  StockImage.java  SvgImage.java
src/org/debian/paulliu/darnwdl/wdlo/: AP.java  BC.java  BH.java  CR.java  ET.java  FR.java  FT.java  Index.java  PL.java  PN.java  R2.java  SD.java  SP.java  Special01.java  Special02.java  Special03.java  SpecialTagReference.java  TC.java  Test1Short.java  TestHexWithSeeklen.java  UF.java  UT.java
src/org/debian/paulliu/darnwdl/wdlo/etdata/: ETData.java
src/org/debian/paulliu/darnwdl/wdlo/utdata/: UTData.java
src/properties/: darnwdl.properties  darnwdl_zh_TW.properties.txt
testdata/: 09630410400.wdl  200701_c4050.wdl  (+9 more)
